service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
  sessionAffinity: None
