route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
  namespace: prometheus
spec:
  host: YOUR_ROUTE
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
